# transer

./: README.md  pyproject.toml
transer/: __init__.py  client.py
wordpress-plugin/: README.md
wordpress-plugin/transer-translate/: readme.txt  transer-translate.php
