[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transer"
version = "0.2.0"
description = "Client library for the Transer page-translation API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.24",
]

[tool.setuptools.packages.find]
include = ["transer*"]
